Improving filtering and fixing bugs on post update
